fix(auth): spinning background visible behind text
Any moving content placed behind text a user needs to read is a bad idea from an accessibility standpoint. This change instead just bakes the gradient into the modal's background.

--- a/res/css/views/auth/_CompleteSecurityBody.pcss
+++ b/res/css/views/auth/_CompleteSecurityBody.pcss
@@ -17,7 +17,7 @@ Please see LICENSE files in the repository root for full details.
 
     /* elecord, custom colours */
     color: #ebeef2;
-    background-color: #000000d9;
+    background: linear-gradient(to right, #191d22, #1f1d1e);
     outline: solid #7d7d7d5c;
 
     h2 {
